--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer</h1>
+	<p>due to my interest,also to earn money</p> 
     <script type="text/javascript" src="./script.js">
 </script>
 
