--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Why I want to become a developer</h1>
+	<h1>Why I want to become a developer?</h1> 
 	<p>Due to my interest|,also to earn money</p> 
     <script type="text/javascript" src="./script.js">
 </script>
