--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Why I want to become a developer?</h1> 
-	<p>Due to my interest|,also to earn money</p> 
+	<p>Due to my interest,also to earn money</p> 
     <script type="text/javascript" src="./script.js">
 </script>
 
